--- a/views/course-analytics/enrolled-users.ejs
+++ b/views/course-analytics/enrolled-users.ejs
@@ -2,7 +2,7 @@
 <div class="box-body no-padding" ng-controller="UserListEnrolledController">
     <ul class="products-list products-list-in-box">
         <li class="item" ng-repeat="user in userList">
-            <div class="product-img"><img class="online img-circle" src="{{user.user.image}}" alt=""/></div>
+            <div class="product-img"><img class="online img-circle" ng-src="{{user.user.image}}" alt=""/></div>
             <div class="product-info">
                 <span class="product-title">{{user.user.displayName | capitalize}}</span><br/>
                 <span class="label label-success"><i class="fa fa-clock-o"></i> Enrolled since: {{user.dateUpdated | date : 'dd.MMM.yyyy'}}</span>
