--- a/public/css/learningHub.css
+++ b/public/css/learningHub.css
@@ -1,6 +1,6 @@
 .controls {
-    margin-top: 50px;
-    margin-bottom: 50px;
+    /*margin-top: 50px;*/
+    margin-bottom: 10px;
 }
 
 /*box styles*/
