--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -68,9 +68,9 @@
                 <div ng-repeat="data in categories" ng-include="'tree_item_renderer.html'"
                      on-finish-render="jsTreeInit">
                 </div>
-                <div class="center-category" id="center" data-shape="Rectangle">
+                <div class="center-category text-center" id="center" data-shape="Rectangle">
                     <h4>CourseMapper</h4>
-                    is a Mind Map Based Collaborative Course Annotation and Analytics Platform
+                    A Mind Map Based Collaborative Course Annotation and Analytics Platform
                 </div>
             </div>
         </div>
