--- a/views/admin-lte/treeNode/nodeNewsFeedUpdate/nodeNewsFeedUpdate.ejs
+++ b/views/admin-lte/treeNode/nodeNewsFeedUpdate/nodeNewsFeedUpdate.ejs
@@ -43,7 +43,7 @@
                             <div class="timeline-body">
                                 <div class="products-list products-list-in-box">
                                     <div class="">
-                                        <div class="product-img" style="margin-left: 10px;"><img src="{{nfData.userId.image}}" alt="user image" class="img-circle" style="width: 30px; height: auto;"/></div>
+                                        <div class="product-img" style="margin-left: 10px;"><img ng-src="{{nfData.userId.image}}" alt="user image" class="img-circle" style="width: 30px; height: auto;"/></div>
                                         <div class="product-info">
                                             <!--<b>{{nfData.userId.displayName}}</b> <span ng-show="'{{nfData.actionSubject}}' != 'canceled vote'">{{nfData.actionType}}</span> {{nfData.actionSubject}}<span ng-show="'{{nfData.actionType}}' == 'added'"> </span>
                                             <a><b>{{nfData.actionName}}</b></a>-->
