--- a/views/course-analytics/top-contributor.ejs
+++ b/views/course-analytics/top-contributor.ejs
@@ -2,7 +2,7 @@
     <ul class="products-list product-list-in-box" ng-if="topContributor.length != 0">
         <li class="item" ng-repeat="user in topContributor">
             <div class="product-img">
-                <img src="{{user.userId.image}}" alt="Product Image" style="border-radius: 50%">
+                <img ng-src="{{user.userId.image}}" alt="Product Image" style="border-radius: 50%">
             </div>
             <div class="product-info">
                 <div class="product-title">{{user.userId.displayName | capitalize}}
