--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -46,8 +46,8 @@
 	<link rel="stylesheet" href="/bower/bootstrap/dist/css/bootstrap.css" />
 	<link rel="stylesheet" href="/bower/bootstrap-daterangepicker/daterangepicker.css" />
 	<!-- Tags -->
-	<link rel="stylesheet" href="http://mbenford.github.io/ngTagsInput/css/ng-tags-input.min.css" />
-	<link rel="stylesheet" href="http://mbenford.github.io/ngTagsInput/css/ng-tags-input.bootstrap.min.css" />
+	<link rel="stylesheet" href="/external-resources/ng-tags-input.min.css" />
+	<link rel="stylesheet" href="/external-resources/ng-tags-input.bootstrap.min.css" />
 	<!-- Switch -->
 	<link href="/bower/angular-ui-switch/angular-ui-switch.min.css"  type="text/css" rel="stylesheet"/>
 	<!-- Peer Assessment Css -->
@@ -56,8 +56,8 @@
 	<link href="/css/learningHub.css" rel="stylesheet" type="text/css" />
 
 	<!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <script src="/external-resources/html5shiv.js"></script>
+    <script src="/external-resources/respond.min.js"></script>
     <![endif]-->
 	<script src="/js/footprint/footprint.js"></script>
 </head>
