Minor CSS updates

--- a/views/admin-lte/cm-admin/mainMenu.ejs
+++ b/views/admin-lte/cm-admin/mainMenu.ejs
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-static-top" ng-controller="MainMenuController">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a href="/" class="logo"><b>Course</b>Mapper</a>
+                <a href="/" class="logo"><span style="margin-left: 25px;"><b>Course</b>Mapper</span></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
