--- a/views/admin-lte/basic.ejs
+++ b/views/admin-lte/basic.ejs
@@ -5,7 +5,7 @@
     <header class="main-header">
 
         <!-- Logo -->
-        <a href="/" class="logo"><b>Course</b>Mapper</a>
+        <a href="/" class="logo"><span style="margin-left: 25px;"><b>Course</b>Mapper</span></a>
 
         <!-- Header Navbar -->
         <nav class="navbar navbar-static-top" role="navigation">
