--- a/views/admin-lte/cm-admin/header.ejs
+++ b/views/admin-lte/cm-admin/header.ejs
@@ -21,8 +21,8 @@
     <link href="/bower/angular-toastr/dist/angular-toastr.min.css" rel="stylesheet" type="text/css"/>
 
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <script src="/external-resources/html5shiv.js"></script>
+    <script src="/external-resources/respond.min.js"></script>
     <![endif]-->
 </head>
 <!--
