--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -48,7 +48,7 @@
 <script src="/bower/vimeo-jquery-api/dist/jquery.vimeo.api.min.js"></script>
 <script src="/bower/videogular-vimeo/dist/vg-vimeo.min.js"></script>
 <script src="/bower/angular-ui-switch/angular-ui-switch.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.2.0/ui-bootstrap-tpls.min.js"></script>
+<script src="/external-resources/ui-bootstrap-tpls.min.js"></script>
 
 <script src="/slide-viewer/js/directives/sa-annotationzone.js"></script>
 <script src="/js/countmap/countmap.js"></script>
@@ -73,7 +73,7 @@
 
 <script src="/build/courseMapper.js"></script>
 <!-- tags-->
-<script src="http://mbenford.github.io/ngTagsInput/js/ng-tags-input.min.js"></script>
+<script src="/external-resources/ng-tags-input.min.js"></script>
 <!-- AdminLTE App -->
 <script src="/bower/AdminLTE/dist/js/adminlte.min.js" type="text/javascript"></script>
 <script src="/build/cm-utils.js" type="text/javascript"></script>
