--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -11,7 +11,7 @@
 <!-- Main Header -->
 <header class="main-header">
     <!-- Logo -->
-    <a href="/" class="logo"><b>Course</b>Mapper</a>
+    <a href="/" class="logo"><span style="margin-left: 25px;"><b>Course</b>Mapper</span></a>
 
     <nav class="navbar navbar-static-top" role="navigation" ng-controller="MainMenuController">
 
