--- a/views/admin-lte/oauth/oHeader.ejs
+++ b/views/admin-lte/oauth/oHeader.ejs
@@ -17,8 +17,8 @@
     <link href="/css/posts.css" rel="stylesheet" type="text/css"/>
 
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <script src="/external-resources/html5shiv.js"></script>
+    <script src="/external-resources/respond.min.js"></script>
     <![endif]-->
 
     <script src="/bower/angular/angular.min.js" type="text/javascript"></script>
@@ -35,7 +35,7 @@ layout-top-nav | fixed | sidebar-collapse
 <body class="skin-blue sidebar-collapse">
 <header class="main-header">
     <!-- Logo -->
-    <a href="javascript:;" class="logo"><b>Course</b>Mapper</a>
+    <a href="javascript:;" class="logo"><span style="margin-left: 25px;"><b>Course</b>Mapper</span></a>
     <nav class="navbar navbar-static-top" role="navigation">
     </nav>
 
