--- a/views/admin-lte/advanced-search/search-form.ejs
+++ b/views/admin-lte/advanced-search/search-form.ejs
@@ -69,7 +69,7 @@
 				<ul class="products-list product-list-in-box">
 					<li class="item box" ng-repeat="item in result | orderBy: sortBy" style="margin: 0 0 5px 0; padding: 10px">
 						<div class="product-img">
-							<img style="width:35px;height:35px" ng-src="/img/search/{{item.type}}.png" alt="Image">
+							<img style="width:35px;height:35px" src="/img/search/{{item.type}}.png" alt="Image">
 						</div>
 						<div class="product-info">
 							<a href="{{item.link}}" class="product-title">{{item.title}}
@@ -94,7 +94,7 @@
 				<ul class="products-list product-list-in-box">
 					<li class="item box" ng-repeat="item in relevant | orderBy: -score" style="margin: 0 0 5px 0; padding: 10px">
 						<div class="product-img">
-							<img style="width:35px;height:35px" ng-src="/img/search/{{item.type}}.png" alt="Image">
+							<img style="width:35px;height:35px" src="/img/search/{{item.type}}.png" alt="Image">
 						</div>
 						<div class="product-info">
 							<a href="{{item.link}}" class="product-title">{{item.title}}
@@ -123,7 +123,7 @@
 				<ul class="products-list product-list-in-box">
 					<li class="item box" ng-repeat="item in popular | orderBy: -score" style="margin: 0 0 5px 0; padding: 10px">
 						<div class="product-img">
-							<img style="width:35px;height:35px" ng-src="/img/search/{{item.type}}.png" alt="Image">
+							<img style="width:35px;height:35px" src="/img/search/{{item.type}}.png" alt="Image">
 						</div>
 						<div class="product-info">
 							<a href="{{item.link}}" class="product-title">{{item.title}}
