--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -5,7 +5,7 @@
 
 <script src="/bower/jquery/dist/jquery.min.js"></script>
 <script src="/bower/jquery-ui/jquery-ui.min.js"></script>
-<script src="/bower/jquery.ui.touch-punch.min/index.js"></script>
+<script src="/external-resources/jquery.ui.touch-punch.min.js"></script>
 <script src="/jsplumb/jsPlumb-1.7.10.js"></script>
 <script src="/jsplumb/jquery.simulate.js"></script>
 <script src="/jsplumb/jquery.simulate.ext.js"></script>
