Updated about page and removed facebook login

--- a/views/admin-lte/login.ejs
+++ b/views/admin-lte/login.ejs
@@ -10,19 +10,19 @@
         <!-- Main content -->
         <section class="content">
             <div class="row row-centered">
-                <div class="col-xs-12 col-md-6  ">
+<!--                <div class="col-xs-12 col-md-6  ">-->
 
-                    <div class="box no-border">
-                        <div class="box-body no-border">
+<!--                    <div class="box no-border">-->
+<!--                        <div class="box-body no-border">-->
 
-                            <p class="help-block">Use your facebook account to login</p>
+<!--                            <p class="help-block">Use your facebook account to login</p>-->
 
-                            <facebook-button></facebook-button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-6 col-centered">
-
+<!--                            <facebook-button></facebook-button>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-xs-12 col-md-6 col-centered">-->
+                <div class="col-xs-12 col-centered">
                     <div class="box no-border">
                         <div class="box-body no-border">
                             <div id="legend">
