--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -183,11 +183,11 @@
                                 <% include formLogin %>
                             </div>
                         </li>
-                        <li>
-                            <form class="form-signin">
-                                <facebook-button></facebook-button>
-                            </form>
-                        </li>
+<!--                        <li>-->
+<!--                            <form class="form-signin">-->
+<!--                                <facebook-button></facebook-button>-->
+<!--                            </form>-->
+<!--                        </li>-->
                     </ul>
                 </li>
                 <li ng-cloak ng-hide="user">
