--- a/views/admin-lte/signUp.ejs
+++ b/views/admin-lte/signUp.ejs
@@ -10,18 +10,18 @@
         <!-- Main content -->
         <section class="content">
             <div class="row row-centered">
-                <div class="col-xs-12 col-md-6">
-                    <div class="box no-border">
-                        <div class="box-body no-border">
-                            <div class="control-group">
-                                <p class="help-block">Use your facebook account to login</p>
-                                <a href="/api/accounts/login/facebook">
-                                    <img src="/img/admin-lte/fb.png">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<!--                <div class="col-xs-12 col-md-6">-->
+<!--                    <div class="box no-border">-->
+<!--                        <div class="box-body no-border">-->
+<!--                            <div class="control-group">-->
+<!--                                <p class="help-block">Use your facebook account to login</p>-->
+<!--                                <a href="/api/accounts/login/facebook">-->
+<!--                                    <img src="/img/admin-lte/fb.png">-->
+<!--                                </a>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
                 <div class="col-xs-12 col-md-6 col-centered" ng-controller="SignUpController">
                     <div class="box no-border">
