--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -26,113 +26,113 @@
                     </p>
                     <br>
                     <p>
-                        The CourseMapper project is supervised by <strong> Dr. Mohamed Amine Chatti</strong></p>
+                        The CourseMapper project is supervised by <strong>Prof. Dr. Mohamed Amine Chatti</strong></p>
                 </div>
             </div>
-            <div class="box-header">
-                <h3>Features/Team </h3>
-            </div>
+
             <div class="box">
                 <div class="box-header">
-                    <h4>Overall UX, Widget System, REST API Implementation and CourseMapper Tool</h4>
+                    <h3>Team Members</h3>
                 </div>
                 <div class="box-body">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6">
-                            <img src="/img/coursemap.png" style="width: 100%">
-                        </div>
-
-                        <div class="col-xs-12 col-sm-6">
-                            Implemented by R. Laksono. <br><br>
-
-                            A tool to collaboratively organise pdf and video
-                            lecture materials as a mind-map.
+                            <ul>
+                                <li><a href="https://www.uni-due.de/soco/people/mohamed-chatti.php" target="_blank">Prof. Dr. Mohamed Amine Chatti (University of Duisburg-Essen, Germany)</a></li>
+                                <li><a href="https://www.uni-due.de/soco/people/arham-muslim.php" target="_blank">Dr. Arham Muslim (University of Duisburg-Essen, Germany)</a></li>
+                                <li><a href="https://www.uni-due.de/soco/people/mouadh-guesmi.php" target="_blank">M.Sc. Mouadh Guesmi (University of Duisburg-Essen, Germany)</a></li>
+                                <li><a href="https://www.uni-due.de/soco/people.php" target="_blank">Ralf Berger (University of Duisburg-Essen, Germany)</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="box">
-                <div class="box-header"><h4>PDF Reader and Annotation Tool</h4>
+                <div class="box-header">
+                    <h3>Past Team Members</h3>
                 </div>
                 <div class="box-body">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+                            <ul>
+                                <li>Dr. Ahmed Mohamed Fahmy Yousef (Fayoum University, Egypt)</li>
+                                <li>M.Sc. Ridho Laksono</li>
+                                <li>M.Sc. J. Klöckner</li>
+                                <li>M.Sc. Iraklis Dimitriadis</li>
+                                <li>M.Sc. Momchil Marinov</li>
+                                <li>M.Sc. Zuhra Sofyan</li>
+                                <li>M.Sc. Oleksandr Sabov</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="box-header">
+                    <h3>Features</h3>
+                </div>
+                <div class="box-body">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+                            <p>A tool to collaboratively organise pdf and video lectures as a mind-map.</p>
+                        </div>
+                        <div class="col-xs-12 col-sm-6">
+                            <img src="/img/coursemap.png" style="width: 100%">
+                        </div>
+                    </div>
+
+                    <hr class="features">
+
                     <div class="row">
                         <div class="col-xs-12 col-sm-6">
                             <img src="/img/pdf.png" style="width:100%">
                         </div>
                         <div class="col-xs-12 col-sm-6">
-                            Implemented by J. Klöckner and I. Dimitrialis.<br><br>
-                            A tool to collaboratively annotate PDF lecture materials.
-
+                            <p>A tool to collaboratively annotate PDF lecture materials.</p>
                         </div>
                     </div>
 
+                    <hr class="features">
 
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-header">
-                    <h4>Video Viewer and Annotation Tool</h4></div>
-
-                <div class="box-body">
                     <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+                            <p>A tool to collaboratively annotate video lecture materials.</p>
+                        </div>
                         <div class="col-xs-12 col-sm-6"><img src="/img/video.png" style="width:100%">
                         </div>
-                        <div class="col-xs-12 col-sm-6">Implemented by M. Marinov.<br><br>
-                            A tool to collaboratively annotate video lecture materials.
-                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-header"><h4>Analytics Widgets on Courses, Videos and PDFs</h4>
-                </div>
-                <div class="box-body">
+
+                    <hr class="features">
+
                     <div class="row">
                         <div class="col-xs-12 col-sm-6">
                             <img src="/img/analytics.png" style="width: 100%">
                         </div>
 
                         <div class="col-xs-12 col-sm-6">
-                            Implemented by Z. Sofyan. <br><br>
-
-                            Different analytics widgets to support monitoring, awareness,
-                            self-reflection, motivation, feedback, and recommendation in CourseMapper.
+                            <p>Analytics Widgets in Courses, Videos and PDFs to support monitoring, awareness,
+                                self-reflection, motivation, feedback, and recommendation in CourseMapper.</p>
 
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-header"><h4>Footprint</h4>
-                </div>
-                <div class="box-body">
+
+                    <hr class="features">
+
                     <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+                            <p>Footprint: Visual learning analytics with heatmaps as a plugin on the video player and the embedded PDF reader.</p>
+                        </div>
                         <div class="col-xs-12 col-sm-6">
                             <img src="/img/footprint.png" style="width: 100%">
                         </div>
-                        <div class="col-xs-12 col-sm-6"> Implemented by S. Oleksandr<br> <br>
-                            Visual learning analytics with heatmaps as a plugin on the video player and the embedded PDF reader.
-                        </div>
                     </div>
                 </div>
             </div>
+
             <div class="box">
-                <div class="box-header"><h4>Past Team Members</h4>
-                </div>
-                <div class="box-body">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6">
-                            <ul>
-                                <li>Dr. Ahmed Mohamed Fahmy Yousef (Fayoum University, Egypt)
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-header"><h4>Technologies</h4>
+                <div class="box-header"><h3>Technologies</h3>
                 </div>
                 <div class="box-body">
                     <div class="row">
