--- a/views/admin-lte/course/map/map.ejs
+++ b/views/admin-lte/course/map/map.ejs
@@ -129,14 +129,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1">
-                <div class="row">
-                    <div type="button" class="btn btn-default btn-sm form-control" data-toggle="button"
-                         aria-pressed="false" autocomplete="off">
-                        T
-                    </div>
-                </div>
-            </div>
+<!--            <div class="col-md-1">-->
+<!--                <div class="row">-->
+<!--                    <div type="button" class="btn btn-default btn-sm form-control" data-toggle="button"-->
+<!--                         aria-pressed="false" autocomplete="off">-->
+<!--                        T-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
 
             <div class="col-md-6 col-md-offset-1">
                 <div class="row">
