--- a/views/admin-lte/course/newsfeedUpdate/newsfeedUpdate.ejs
+++ b/views/admin-lte/course/newsfeedUpdate/newsfeedUpdate.ejs
@@ -54,9 +54,9 @@
                                             <a ng-if="nfData.actionType != 'deleted'" ng-show="nfData.actionSubject == 'content node'" href="/treeNode/{{nfData.nodeId._id}}/#/cid/{{curUrl.courseId}}/nid/{{nfData.nodeId._id}}"><b>{{nfData.actionName | capitalize}}</b></a>
                                             <a ng-show="nfData.actionSubject == 'discussion'" href="#/cid/{{curUrl.courseId}}?tab=discussion"><b>{{nfData.actionName | capitalize}}</b></a>
                                             <a ng-show="nfData.actionSubject == 'course'" href="#/cid/{{curUrl.courseId}}?tab=preview"><b>{{nfData.actionName | capitalize}}</b></a>
-                                            <a ng-show="nfData.actionSubject == 'pdf annotation'" href="/treeNode/{{nfData.nodeId}}/#/cid/{{nfData.courseId}}/nid/{{nfData.nodeId}}?tab=pdf"><b>{{nfData.actionName | capitalize}}</b></a>
+                                            <a ng-show="nfData.actionSubject == 'pdf annotation'" href="/treeNode/{{nfData.nodeId._id}}/#/cid/{{nfData.courseId}}/nid/{{nfData.nodeId._id}}?tab=pdf"><b>{{nfData.actionName | capitalize}}</b></a>
                                             <a ng-show="nfData.actionSubject == 'video annotation'" href="/treeNode/{{nfData.nodeId._id}}/#/cid/{{nfData.courseId}}/nid/{{nfData.nodeId._id}}?tab=video"><b>{{nfData.actionName | capitalize}}</b></a>
-                                            <a ng-show="nfData.actionSubject == 'link'" href="/treeNode/{{nfData.nodeId}}/#/cid/{{nfData.courseId}}/nid/{{nfData.nodeId}}?tab=links"><b>{{nfData.actionName | capitalize}}</b></a>
+                                            <a ng-show="nfData.actionSubject == 'link'" href="/treeNode/{{nfData.nodeId._id}}/#/cid/{{nfData.courseId}}/nid/{{nfData.nodeId._id}}?tab=links"><b>{{nfData.actionName | capitalize}}</b></a>
                                             <br/>
                                             <small class="text-muted">
                                                 <i class="fa fa-clock-o"> {{nfData.dateAdded | relativeDate}}</i>
