--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -1,60 +1,89 @@
 <% include ../header %>
-<div class="wrapper">
+<div class = "wrapper">
 
     <!-- Header Navbar -->
     <% include ../mainMenu %>
 
-    <section class="content-header" ng-controller="aboutController">
-        <ol class="breadcrumb">
-            <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
+    <section class = "content-header" ng-controller = "aboutController">
+        <ol class = "breadcrumb">
+            <li><a href = "/"><i class = "fa fa-home"></i> Home</a></li>
             <li>About CourseMapper</li>
         </ol>
     </section>
 
-    <div class="content-wrapper">
-        <section class="content">
-            <div class="box">
+    <div class = "content-wrapper">
+        <section class = "content">
+            <div class = "box">
+                <div class = "container-fluid">
+                    <div class = "row">
+                        <div class = "col-xs-8 col-md-10">
+                            <div class = "box-header">
+                                <h3>About CourseMapper</h3>
+                            </div>
+                            <div class = "box-body">
 
-                <div class="box-header">
-                    <h3>About CourseMapper</h3>
-                </div>
-                <div class="box-body">
-                    <p>
-                        CourseMapper is a mind map-based collaborative course annotation and analytics platform that
-                        fosters collaboration and interaction around pdf/video learning materials, supported by visual
-                        learning analytics.
-                    </p>
-                    <br>
-                    <p>
-                        The CourseMapper project is supervised by <strong>Prof. Dr. Mohamed Amine Chatti</strong></p>
+                                <p>
+                                    CourseMapper is a mind map-based collaborative course annotation and analytics
+                                    platform
+                                    that
+                                    fosters collaboration and interaction around pdf/video learning materials, supported
+                                    by
+                                    visual
+                                    learning analytics.
+                                </p>
+                                <br>
+                                <p>
+                                    The CourseMapper project is supervised by <strong>Prof. Dr. Mohamed Amine
+                                        Chatti</strong>
+                                </p>
+
+                            </div>
+                        </div>
+                        <div class = "col-xs-4 col-md-2" style="margin-top: 5px">
+                            <a href = "https://www.uni-due.de/" target = "_blank"><img
+                                        src = "/img/admin-lte/ude-logo.png"
+                                        alt = "UDE Logo" style = "width: 100%"></a>
+                            <a href = "https://www.uni-due.de/soco/" target = "_blank" style="margin: 20px 0px 5px 0px ;display: block"><img
+                                        src = "/img/admin-lte/soco-logo.png"
+                                        alt = "SoCo Logo" style = "width: 100%"></a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="box">
-                <div class="box-header">
+
+            <div class = "box">
+                <div class = "box-header">
                     <h3>Team Members</h3>
                 </div>
-                <div class="box-body">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6">
+                <div class = "box-body">
+                    <div class = "row">
+                        <div class = "col-xs-12 col-sm-6">
                             <ul>
-                                <li><a href="https://www.uni-due.de/soco/people/mohamed-chatti.php" target="_blank">Prof. Dr. Mohamed Amine Chatti (University of Duisburg-Essen, Germany)</a></li>
-                                <li><a href="https://www.uni-due.de/soco/people/arham-muslim.php" target="_blank">Dr. Arham Muslim (University of Duisburg-Essen, Germany)</a></li>
-                                <li><a href="https://www.uni-due.de/soco/people/mouadh-guesmi.php" target="_blank">M.Sc. Mouadh Guesmi (University of Duisburg-Essen, Germany)</a></li>
-                                <li><a href="https://www.uni-due.de/soco/people.php" target="_blank">Ralf Berger (University of Duisburg-Essen, Germany)</a></li>
+                                <li><a href = "https://www.uni-due.de/soco/people/mohamed-chatti.php"
+                                       target = "_blank">Prof.
+                                        Dr. Mohamed Amine Chatti (University of Duisburg-Essen, Germany)</a></li>
+                                <li><a href = "https://www.uni-due.de/soco/people/arham-muslim.php"
+                                       target = "_blank">Dr.
+                                        Arham Muslim (University of Duisburg-Essen, Germany)</a></li>
+                                <li><a href = "https://www.uni-due.de/soco/people/mouadh-guesmi.php"
+                                       target = "_blank">M.Sc.
+                                        Mouadh Guesmi (University of Duisburg-Essen, Germany)</a></li>
+                                <li><a href = "https://www.uni-due.de/soco/people.php" target = "_blank">Ralf Berger
+                                        (University of Duisburg-Essen, Germany)</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="box">
-                <div class="box-header">
+            <div class = "box">
+                <div class = "box-header">
                     <h3>Past Team Members</h3>
                 </div>
-                <div class="box-body">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6">
+                <div class = "box-body">
+                    <div class = "row">
+                        <div class = "col-xs-12 col-sm-6">
                             <ul>
                                 <li>Dr. Ahmed Mohamed Fahmy Yousef (Fayoum University, Egypt)</li>
                                 <li>M.Sc. Ridho Laksono</li>
@@ -69,74 +98,76 @@
                 </div>
             </div>
 
-            <div class="box">
-                <div class="box-header">
+            <div class = "box">
+                <div class = "box-header">
                     <h3>Features</h3>
                 </div>
-                <div class="box-body">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6">
+                <div class = "box-body">
+                    <div class = "row">
+                        <div class = "col-xs-12 col-sm-6">
                             <p>A tool to collaboratively organise pdf and video lectures as a mind-map.</p>
                         </div>
-                        <div class="col-xs-12 col-sm-6">
-                            <img src="/img/coursemap.png" style="width: 100%">
+                        <div class = "col-xs-12 col-sm-6">
+                            <img src = "/img/coursemap.png" style = "width: 100%">
                         </div>
                     </div>
 
-                    <hr class="features">
+                    <hr class = "features">
 
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6">
-                            <img src="/img/pdf.png" style="width:100%">
+                    <div class = "row">
+                        <div class = "col-xs-12 col-sm-6">
+                            <img src = "/img/pdf.png" style = "width:100%">
                         </div>
-                        <div class="col-xs-12 col-sm-6">
+                        <div class = "col-xs-12 col-sm-6">
                             <p>A tool to collaboratively annotate PDF lecture materials.</p>
                         </div>
                     </div>
 
-                    <hr class="features">
+                    <hr class = "features">
 
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6">
+                    <div class = "row">
+                        <div class = "col-xs-12 col-sm-6">
                             <p>A tool to collaboratively annotate video lecture materials.</p>
                         </div>
-                        <div class="col-xs-12 col-sm-6"><img src="/img/video.png" style="width:100%">
+                        <div class = "col-xs-12 col-sm-6"><img src = "/img/video.png" style = "width:100%">
                         </div>
                     </div>
 
-                    <hr class="features">
+                    <hr class = "features">
 
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6">
-                            <img src="/img/analytics.png" style="width: 100%">
+                    <div class = "row">
+                        <div class = "col-xs-12 col-sm-6">
+                            <img src = "/img/analytics.png" style = "width: 100%">
                         </div>
 
-                        <div class="col-xs-12 col-sm-6">
+                        <div class = "col-xs-12 col-sm-6">
                             <p>Analytics Widgets in Courses, Videos and PDFs to support monitoring, awareness,
                                 self-reflection, motivation, feedback, and recommendation in CourseMapper.</p>
 
                         </div>
                     </div>
 
-                    <hr class="features">
+                    <hr class = "features">
 
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6">
-                            <p>Footprint: Visual learning analytics with heatmaps as a plugin on the video player and the embedded PDF reader.</p>
+                    <div class = "row">
+                        <div class = "col-xs-12 col-sm-6">
+                            <p>Footprint: Visual learning analytics with heatmaps as a plugin on the video player
+                                and
+                                the embedded PDF reader.</p>
                         </div>
-                        <div class="col-xs-12 col-sm-6">
-                            <img src="/img/footprint.png" style="width: 100%">
+                        <div class = "col-xs-12 col-sm-6">
+                            <img src = "/img/footprint.png" style = "width: 100%">
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="box">
-                <div class="box-header"><h3>Technologies</h3>
+            <div class = "box">
+                <div class = "box-header"><h3>Technologies</h3>
                 </div>
-                <div class="box-body">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6">
+                <div class = "box-body">
+                    <div class = "row">
+                        <div class = "col-xs-12 col-sm-6">
                             <ul>
                                 <li>NodeJS, ExpressJS, PassportJS, Socket.io</li>
                                 <li>MongoDB, Mongoose</li>
