--- a/frontend-modules/angular/views/nodeDetail/pdf-comment.html
+++ b/frontend-modules/angular/views/nodeDetail/pdf-comment.html
@@ -53,7 +53,7 @@
                 <div class="input-group input-group-sm">
                     <input placeholder="Write a comment..." type="text" ng-model="commentText" class="form-control">
                     <span class="input-group-btn">
-                      <button class="btn btn-primary btn-flat" type="submit" ng-click="postComment()">reply</button>
+                      <button class="btn btn-primary btn-flat" type="submit" ng-click="postComment()">REPLY</button>
                     </span>
                 </div>
             </div>
